--- a/DartsApp/app/src/main/res/values/colors.xml
+++ b/DartsApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorButton">#1D3557</color>
+    <color name="colorText">#F1FAEE</color>
+    <color name="colorButton2">#A8DADC</color>
+    <color name="colorButton3">#457B9D</color>
 </resources>
