--- a/DartsApp/app/src/main/res/layout/activity_main.xml
+++ b/DartsApp/app/src/main/res/layout/activity_main.xml
@@ -20,28 +20,13 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/background" />
 
-    <TextView
-        android:id="@+id/tvBeginScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="14dp"
-        android:text="@string/_501"
-        android:textAlignment="center"
-        android:textColor="@color/colorButton"
-        android:textSize="88sp"
-        app:layout_constraintBottom_toTopOf="@+id/etPlayer1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ivBackground" />
-
     <Button
         android:id="@+id/btnStart"
         android:layout_width="0dp"
         android:layout_height="74dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="@color/colorButton"
         android:elevation="4dp"
@@ -53,29 +38,68 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
+        android:id="@+id/etPlayer1"
+        android:layout_width="0dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        android:autofillHints=""
+        android:background="@drawable/custom_rounded_corners"
+        android:backgroundTint="#FFFFFF"
+        android:elevation="4dp"
+        android:hint="@string/player_1"
+        android:inputType="textPersonName"
+        android:shadowColor="#000000"
+        android:textColor="@color/colorButton3"
+        android:textColorHint="#BEC5CE"
+        app:layout_constraintBottom_toTopOf="@+id/etPlayer2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/etPlayer2"
+        android:layout_width="0dp"
+        android:layout_height="74dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        android:autofillHints=""
+        android:background="@drawable/custom_rounded_corners"
+        android:backgroundTint="#FFFFFF"
+        android:elevation="4dp"
+        android:hint="@string/name_player_2"
+        android:inputType="textPersonName"
+        android:shadowColor="#000000"
+        android:textColorHint="#BEC5CE"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
         android:id="@+id/etNumberOfLegs"
         android:layout_width="0dp"
         android:layout_height="74dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="8dp"
+        android:autofillHints=""
         android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="#FFFFFF"
         android:elevation="4dp"
-        android:textColorHint="#BEC5CE"
         android:hint="@string/number_of_legs"
         android:inputType="number"
         android:shadowColor="#000000"
+        android:textColorHint="#BEC5CE"
         app:layout_constraintBottom_toTopOf="@+id/btnStart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:autofillHints="" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="@+id/ivBackground"
@@ -100,6 +124,8 @@
             android:layout_weight="1"
             android:background="@drawable/custom_rounded_cornersside2"
             android:backgroundTint="@color/colorButton2"
+            android:elevation="4dp"
+            android:shadowColor="#000000"
             android:text="@string/sets"
             android:textColor="@color/colorButton" />
     </LinearLayout>
@@ -108,7 +134,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/etNumberOfLegs"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,43 +163,29 @@
             android:textColor="@color/colorText" />
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/etPlayer2"
-        android:layout_width="0dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="14dp"
-        android:background="@drawable/custom_rounded_corners"
-        android:backgroundTint="#FFFFFF"
-        android:elevation="4dp"
-        android:hint="@string/name_player_2"
-        android:textColorHint="#BEC5CE"
-        android:inputType="textPersonName"
-        android:shadowColor="#000000"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:autofillHints="" />
+    <TextView
+        android:id="@+id/tvBeginScore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="@string/_501"
+        android:textColor="@color/colorButton"
+        android:textSize="65sp"
+        app:layout_constraintBottom_toTopOf="@+id/etPlayer1"
+        app:layout_constraintEnd_toEndOf="@+id/etPlayer1"
+        app:layout_constraintStart_toStartOf="@+id/etPlayer1" />
 
-    <EditText
-        android:id="@+id/etPlayer1"
-        android:layout_width="0dp"
-        android:layout_height="74dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="14dp"
-        android:autofillHints=""
-        android:background="@drawable/custom_rounded_corners"
-        android:backgroundTint="#FFFFFF"
-        android:elevation="4dp"
-        android:hint="@string/player_1"
-        android:textColorHint="#BEC5CE"
-        android:inputType="textPersonName"
-        android:shadowColor="#000000"
-        android:textColor="@color/colorButton3"
-        app:layout_constraintBottom_toTopOf="@+id/etPlayer2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabHistory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:backgroundTint="@color/colorButton2"
+        app:layout_constraintBottom_toBottomOf="@+id/tvBeginScore"
+        app:layout_constraintEnd_toEndOf="@+id/etPlayer1"
+        app:layout_constraintStart_toEndOf="@+id/tvBeginScore"
+        app:layout_constraintTop_toTopOf="@+id/tvBeginScore"
+        app:srcCompat="@drawable/ic_history_black_24dp"
+        android:focusable="true" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
