Layout screen 2 finished

--- a/DartsApp/app/src/main/res/values/colors.xml
+++ b/DartsApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorText">#F1FAEE</color>
     <color name="colorButton2">#A8DADC</color>
     <color name="colorButton3">#457B9D</color>
+    <color name="colorButton4">#E63946</color>
 </resources>
