--- a/DartsApp/app/src/main/res/values/colors.xml
+++ b/DartsApp/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorButton2">#A8DADC</color>
     <color name="colorButton3">#457B9D</color>
     <color name="colorButton4">#E63946</color>
+    <color name="colorButton5">#D3ECED</color>
 </resources>
