--- a/DartsApp/app/src/main/res/layout/activity_pre_game.xml
+++ b/DartsApp/app/src/main/res/layout/activity_pre_game.xml
@@ -10,6 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:contentDescription="@string/todo"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
