--- a/DartsApp/app/src/main/res/layout/activity_main.xml
+++ b/DartsApp/app/src/main/res/layout/activity_main.xml
@@ -71,6 +71,7 @@
         android:hint="@string/name_player_2"
         android:inputType="textPersonName"
         android:shadowColor="#000000"
+        android:textColor="@color/colorButton"
         android:textColorHint="#BEC5CE"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,6 +91,7 @@
         android:hint="@string/number_of_legs"
         android:inputType="number"
         android:shadowColor="#000000"
+        android:textColor="@color/colorButton"
         android:textColorHint="#BEC5CE"
         app:layout_constraintBottom_toTopOf="@+id/btnStart"
         app:layout_constraintEnd_toEndOf="parent"
