--- a/DartsApp/app/src/main/res/layout/activity_pre_game.xml
+++ b/DartsApp/app/src/main/res/layout/activity_pre_game.xml
@@ -41,7 +41,6 @@
         android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="@color/colorButton4"
         android:elevation="4dp"
-        android:shadowColor="#F2000000"
         android:text="@string/name_player_2"
         android:textColor="@color/colorText"
         app:layout_constraintBottom_toTopOf="@id/btnPlayer2"
@@ -55,6 +54,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="8dp"
+        android:backgroundTintMode="src_in"
         android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="#FFFFFF"
         android:elevation="4dp"
