--- a/DartsApp/app/src/main/res/layout/activity_game.xml
+++ b/DartsApp/app/src/main/res/layout/activity_game.xml
@@ -277,7 +277,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
-                    android:text="0"
+                    android:text="@string/_0"
                     android:textColor="@color/colorButton"
                     android:textSize="60sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -289,7 +289,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="24dp"
-                    android:text="0"
+                    android:text="@string/_0"
                     android:textColor="@color/colorButton"
                     android:textSize="60sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -384,7 +384,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
-                    android:text="0"
+                    android:text="@string/_0"
                     android:textColor="@color/colorButton"
                     android:textSize="60sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -396,7 +396,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="24dp"
-                    android:text="0"
+                    android:text="@string/_0"
                     android:textColor="@color/colorButton"
                     android:textSize="60sp"
                     app:layout_constraintBottom_toBottomOf="parent"
