--- a/DartsApp/app/src/main/res/layout/activity_main.xml
+++ b/DartsApp/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:hint="@string/player_1"
         android:inputType="textPersonName"
         android:shadowColor="#000000"
-        android:textColor="@color/colorButton3"
+        android:textColor="@color/colorButton"
         android:textColorHint="#BEC5CE"
         app:layout_constraintBottom_toTopOf="@+id/etPlayer2"
         app:layout_constraintEnd_toEndOf="parent"
