--- a/DartsApp/app/src/main/res/menu/menu_main.xml
+++ b/DartsApp/app/src/main/res/menu/menu_main.xml
@@ -1,9 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.gamebacklog.ui.main.MainActivity">
+    tools:context=".MainActivity">
+
     <item
-        android:id="@+id/action_game_stats"
-        android:title="Game Stats"
-        app:showAsAction="ifRoom" />
+        android:id="@+id/action_favorite"
+        android:orderInCategory="300"
+        android:title="User"
+        android:icon="@drawable/ic_history_black_24dp"
+        app:showAsAction="ifRoom"></item>
+
 </menu>
