--- a/DartsApp/app/src/main/res/layout/stats_item.xml
+++ b/DartsApp/app/src/main/res/layout/stats_item.xml
@@ -3,38 +3,53 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_margin="8dp">
 
-    <TextView
-        android:id="@+id/tvWinner"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Winner"
+        android:background="@color/colorButton"
+        android:orientation="vertical"
+        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/tvLegNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/legs"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tvMatchName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/legs"
+            android:textColor="@color/colorText" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="avg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvWinner" />
+        <TextView
+            android:id="@+id/tvWinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Winner"
+            android:textColor="@color/colorText" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="date"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvLegNumber" />
+        <TextView
+            android:id="@+id/tvContestants"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="avg"
+            android:textColor="@color/colorText" />
+
+        <TextView
+            android:id="@+id/tvResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="(3-1)"
+            android:textColor="@color/colorText" />
+
+        <TextView
+            android:id="@+id/tvDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="date"
+            android:textColor="@color/colorText" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
